Fix pixel bleeding, improve class substitution (no js)

--- a/time_tracking_dashboard/css/main.css
+++ b/time_tracking_dashboard/css/main.css
@@ -1,21 +1,3 @@
-.text_preset_1 {
-  font-family: "Rubik", sans-serif;
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.178;
-  letter-spacing: 0;
-  color: hsl(0, 100%, 100%);
-}
-
-.text_preset_2 {
-  font-family: "Rubik", sans-serif;
-  font-size: 2.5rem;
-  font-weight: 300;
-  line-height: 1.17;
-  letter-spacing: 0;
-  color: hsl(0, 100%, 100%);
-}
-
 .text_preset_3 {
   font-family: "Rubik", sans-serif;
   font-size: 2rem;
@@ -69,12 +51,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 143.5vh;
-}
-@media screen and (min-width: 48rem) {
-  .page_wrapper {
-    height: 100vh;
-  }
+  height: 100svh;
 }
 
 .report_summary {
@@ -102,10 +79,16 @@ body {
     padding: 2rem 2.5rem 5.75rem 2rem;
   }
 }
-.report_summary__avatar_name {
+.report_summary__avatar_details {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+@media screen and (min-width: 90rem) {
+  .report_summary .avatar_name {
+    font-size: 2.5rem;
+    line-height: 1.17;
+  }
 }
 .report_summary__avatar_img {
   inline-size: 4rem;
@@ -175,6 +158,7 @@ body {
   background-color: hsl(235, 46%, 20%);
   border-radius: inherit;
   padding: 1.719rem 1.5rem;
+  box-shadow: 0 0 0 0.1px hsl(235, 46%, 20%);
 }
 @media screen and (min-width: 48rem) {
   .item__container {
@@ -209,6 +193,12 @@ body {
     flex-direction: column;
     gap: 0.5rem;
     align-items: start;
+  }
+}
+@media screen and (min-width: 48rem) {
+  .item .current_hours {
+    font-size: 3.5rem;
+    line-height: 1.178;
   }
 }
 
