--- a/time_tracking_dashboard/scss/abstract/_utils.scss
+++ b/time_tracking_dashboard/scss/abstract/_utils.scss
@@ -2,14 +2,6 @@
 @use "./mixins" as m;
 @use "sass:map";
 
-.text_preset_1 {
-    @include m.text_preset(v.$font_family, map.get(v.$fs, 56), map.get(v.$fw, "light"), 1.178, 0, v.$white);
-}
-
-.text_preset_2 {
-    @include m.text_preset(v.$font_family, map.get(v.$fs, 40), map.get(v.$fw, "light"), 1.17, 0, v.$white);
-}
-
 .text_preset_3 {
     @include m.text_preset(v.$font_family, map.get(v.$fs, 32), map.get(v.$fw, "light"), 1.1875, 0, v.$white);
 }
